<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardViewItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="4dp"
    android:layout_marginTop="6dp"
    android:elevation="4dp"
    app:cardCornerRadius="4dp"
    app:cardUseCompatPadding="true"
    app:strokeColor="@color/purple_700"
    app:strokeWidth="1dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/photoImageView"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/splash_icon" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/titleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:padding="4dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:maxLines="2"
                android:ellipsize="end"
                android:text="@string/title"
                android:tooltipText="@string/image_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/descriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:padding="4dp"
                android:maxLines="2"
                android:ellipsize="end"
                android:textSize="14sp"
                android:text="@string/description"
                android:tooltipText="@string/image_description" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</com.google.android.material.card.MaterialCardView>